[tool.poetry]
name = "toolip"
version = "0.1.0"
description = "A collection of python utils for webapps"
authors = ["Anthony Hillairet <ant@satel.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
mypy = "^0.910"
flake8 = "^3.9.2"
flake8-isort = "^4.0.0"
requests = "^2.26.0"
types-requests="^2.25.0"
black = "^21.5b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
skip-string-normalization = true

[tool.isort]
profile = "black"
known_third_party = ["fastapi", "pydantic", "starlette"]
